gcc/testsuite/g++.dg/parse/error59.C
// PR c++/84493

void foo()
{
  (struct {}x){}; // { dg-error "" }
}
